profilelist1exp/unpackaged/objects/Sales_Motion_Contact_Event__e.object
<CustomObject>
    <description>Platform Event to upsert or delete Sales Motion Contact records</description>
    <fields>
        <fullName>ContactId__c</fullName>
        <description>Field to hold Contact Id</description>
        <label>ContactId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_PartnerTrackIds__c</fullName>
        <description>Field to hold semicolon separated partner track id&apos;s</description>
        <label>New PartnerTrackIds</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Old_PartnerTrackIds__c</fullName>
        <description>Filed to hold semicolon separated old partner track id&apos;s</description>
        <label>Old PartnerTrackIds</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Sales Motion Contact Event</label>
    <pluralLabel>Sales Motion Contact Events</pluralLabel>
</CustomObject>